<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="cast_casting_to_device">Casting to %1$s</string>
    <string name="cast_closed_captions">Closed captions</string>
    <string name="cast_closed_captions_unavailable">Closed captions unavailable</string>
    <string name="cast_disconnect">Disconnect</string>
    <string name="cast_expanded_controller_background_image">Album art</string>
    <string name="cast_expanded_controller_loading">Loading…</string>
    <string name="cast_forward">Forward</string>
    <string name="cast_forward_10">Forward ten seconds</string>
    <string name="cast_forward_30">Forward thirty seconds</string>
    <string name="cast_intro_overlay_button_text">@android:string/ok</string>
    <string name="cast_mute">Mute</string>
    <string name="cast_notification_connected_message">Connected to %1$s</string>
    <string name="cast_notification_connecting_message">Connecting to %1$s</string>
    <string name="cast_notification_disconnect">Disconnect</string>
    <string name="cast_pause">Pause</string>
    <string name="cast_play">Play</string>
    <string name="cast_rewind">Rewind</string>
    <string name="cast_rewind_10">Rewind ten seconds</string>
    <string name="cast_rewind_30">Rewind thirty seconds</string>
    <string name="cast_seek_bar">Playback seek control</string>
    <string name="cast_skip_next">Skip to next item</string>
    <string name="cast_skip_prev">Skip to previous item</string>
    <string name="cast_stop">Stop</string>
    <string name="cast_stop_live_stream">Stop live stream</string>
    <string name="cast_tracks_chooser_dialog_audio">Audio</string>
    <string name="cast_tracks_chooser_dialog_cancel">Cancel</string>
    <string name="cast_tracks_chooser_dialog_default_track_name">Track %1$d</string>
    <string name="cast_tracks_chooser_dialog_no_audio_tracks">No Audio Tracks Available</string>
    <string name="cast_tracks_chooser_dialog_no_text_tracks">No Text Tracks Available</string>
    <string name="cast_tracks_chooser_dialog_no_tracks_available">No tracks available</string>
    <string name="cast_tracks_chooser_dialog_none">None</string>
    <string name="cast_tracks_chooser_dialog_ok">OK</string>
    <string name="cast_tracks_chooser_dialog_subtitles">Subtitles</string>
    <string name="cast_unmute">Unmute</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"%1$s won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"%1$s won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. If the problem persists, please contact the developer for assistance.</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="messenger_send_button_text">Send</string>
    <string name="mr_button_content_description">Cast button</string>
    <string name="mr_chooser_searching">Finding devices</string>
    <string name="mr_chooser_title">Cast to</string>
    <string name="mr_controller_album_art">Album art</string>
    <string name="mr_controller_casting_screen">Casting screen</string>
    <string name="mr_controller_close_description">Close</string>
    <string name="mr_controller_collapse_group">Collapse</string>
    <string name="mr_controller_disconnect">Disconnect</string>
    <string name="mr_controller_expand_group">Expand</string>
    <string name="mr_controller_no_info_available">No info available</string>
    <string name="mr_controller_no_media_selected">No media selected</string>
    <string name="mr_controller_pause">Pause</string>
    <string name="mr_controller_play">Play</string>
    <string name="mr_controller_stop">Stop casting</string>
    <string name="mr_system_route_name">System</string>
    <string name="mr_user_route_category_name">Devices</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="Category_Feeback">Góp Ý &amp; Báo Lỗi</string>
    <string name="Category_infor">Thông Tin &amp; Hướng Dẫn</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="about_app">About Cast Videos</string>
    <string name="bug">Báo lỗi</string>
    <string name="clear_search_keyword">Xóa lịch sử tìm kiếm</string>
    <string name="create_account">Tạo Tài Khoản</string>
    <string name="danh_s_ch_xem">Danh Sách Xem</string>
    <string name="easy_login">Đăng nhập dễ dàng hơn</string>
    <string name="every_account_only_synchronize_once">Mỗi tài khoản chỉ được đồng bộ duy nhất 1 lần</string>
    <string name="exo_desc">Dùng player cải tiến của Google</string>
    <string name="follow_info_will_sync">Các thông tin sau sẽ được đồng bộ</string>
    <string name="give_30_days_vip">"Tặng ngay 
 "<b><font color="#dfdc20">VIP 30 ngày</font></b></string>
    <string name="lock_rotate">Khóa xoay</string>
    <string name="login_via_zalo">Đăng Nhập Qua Zalo</string>
    <string name="media_route_menu_title">Chromecast</string>
    <string name="member_vip_until_day_and_add_login_zalo_30days_gift">Thành viên VIP đến ngày %s Quà tặng login Zalo 30 ngày sẽ được cộng thêm sau đó</string>
    <string name="more">Thêm</string>
    <string name="more_3g">Chế độ tiết kiệm 3G</string>
    <string name="more_3g_note">Xem ở chất lượng thấp nhất khi dùng 3G</string>
    <string name="more_app_info">Về ứng dụng</string>
    <string name="more_bug">Báo lỗi</string>
    <string name="more_copyright">Copyright issues</string>
    <string name="more_log_out">Đăng xuất</string>
    <string name="more_rating">Đánh giá</string>
    <string name="more_secure_account">Bảo mật tài khoản tốt hơn</string>
    <string name="more_version" formatted="false">Phiên bản %s (%s)</string>
    <string name="number_subcribe_program">%s chương trình quan tâm</string>
    <string name="prefs_header_application">Application Behavior</string>
    <string name="prefs_header_application_summary">Control how the application behaves on the TV</string>
    <string name="prefs_volume_default">device</string>
    <string name="prefs_volume_dialog_title">Volume Assignment</string>
    <string name="prefs_volume_title">Volume Assignment</string>
    <string name="prefs_volume_title_summary">Controls %1$s</string>
    <string name="quick_gesture">Thao tác nhanh</string>
    <string name="quick_gesture_desc">Dùng thao tác ngón tay để chỉnh âm lượng, độ sáng, lướt video khi xem</string>
    <string name="rating">Đánh giá</string>
    <string name="report">Copyright</string>
    <string name="resume_title_setting">Xem tiếp từ điểm dừng trước đó</string>
    <string name="setting_exo_player">ExoPlayer</string>
    <string name="settings">Thiết lập</string>
    <string name="share">Chia sẻ</string>
    <string name="sub_title">Phụ đề</string>
    <string name="sync">Đồng Bộ</string>
    <string name="synchronize_property_from_zing_id">Đồng bộ tài sản từ Zing ID</string>
    <string name="synchronize_with_another_accont">Đồng bộ với tài khoản khác</string>
    <string name="version">CastVideos: %1$s</string>
    <string name="video_related_normal">Video liên quan</string>
    <string name="view_history_video">Lịch sử xem %s video</string>
    <string name="yes">Có</string>
</resources>