<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/prefs_header_application" android:summary="@string/prefs_header_application_summary">
        <ListPreference android:entries="@array/prefs_volume_names" android:title="@string/prefs_volume_title" android:key="volume_target" android:summary="@string/prefs_volume_title_summary" android:defaultValue="@string/prefs_volume_default" android:dialogTitle="@string/prefs_volume_dialog_title" android:entryValues="@array/prefs_volume_values" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/about_app">
        <EditTextPreference android:persistent="false" android:enabled="false" android:title="@string/version" android:selectable="false" android:key="app_version" android:shouldDisableView="false" />
    </PreferenceCategory>
</PreferenceScreen>