<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@id/media_route_menu_item" android:orderInCategory="100" android:title="@string/media_route_menu_title" app:showAsAction="always" app:actionProviderClass="android.support.v7.app.MediaRouteActionProvider" />
    <item android:icon="@drawable/ic_playlist_black_24dp" android:id="@id/action_show_queue" android:title="@string/danh_s_ch_xem" app:showAsAction="never" />
    <item android:icon="@drawable/ico_playlist_white" android:id="@id/menu_playlist" android:visible="false" android:title="@string/video_related_normal" app:showAsAction="always" />
    <item android:icon="@drawable/ic_sub_title" android:id="@id/menu_sub" android:visible="false" android:title="@string/sub_title" app:showAsAction="never" />
    <item android:icon="@drawable/ic_media_lock" android:id="@id/menu_lock" android:visible="false" android:title="@string/lock_rotate" app:showAsAction="never" />
    <item android:icon="@drawable/ic_action_report" android:id="@id/menu_report" android:title="@string/report" app:showAsAction="never" />
</menu>