<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/ll_user" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="40.0dip" android:layout_centerHorizontal="true">
        <ImageView android:id="@id/img_center" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="User" style="@style/ZingTV.Widget.LoginText" />
    </LinearLayout>
    <TextView android:gravity="center" android:id="@id/tv_first" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="40.0dip" android:layout_marginRight="20.0dip" android:text="@string/follow_info_will_sync" android:layout_below="@id/ll_user" style="@style/ZingTV.Widget.SecondaryText" />
    <TextView android:id="@id/tv_second" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="60.0dip" android:layout_marginRight="10.0dip" android:text="@string/view_history_video" android:drawableLeft="@drawable/icon" android:drawablePadding="5.0dip" android:layout_below="@id/tv_first" style="@style/ZingTV.Widget.LoginText" />
    <TextView android:id="@id/tv_thirst" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="10.0dip" android:text="@string/number_subcribe_program" android:drawableLeft="@drawable/icon" android:drawablePadding="5.0dip" android:layout_below="@id/tv_second" style="@style/ZingTV.Widget.LoginText" />
    <TextView android:id="@id/tv_four" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="10.0dip" android:text="@string/member_vip_until_day_and_add_login_zalo_30days_gift" android:drawableLeft="@drawable/icon" android:drawablePadding="5.0dip" android:layout_below="@id/tv_thirst" style="@style/ZingTV.Widget.LoginText" />
    <Button android:textSize="@dimen/secondary_text_size" android:textStyle="bold" android:textColor="@color/white_f7f7f7" android:gravity="center" android:layout_gravity="center" android:background="@drawable/green_rectangle_shape_selector" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="40.0dip" android:layout_marginRight="10.0dip" android:text="@string/sync" android:singleLine="true" android:layout_below="@id/tv_four" android:textAllCaps="false" />
    <TextView android:textStyle="bold" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginRight="20.0dip" android:text="@string/synchronize_with_another_accont" android:layout_above="@id/tv_footer" style="@style/ZingTV.Widget.LoginText" />
    <TextView android:gravity="center" android:id="@id/tv_footer" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="20.0dip" android:layout_marginBottom="30.0dip" android:text="@string/every_account_only_synchronize_once" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" style="@style/ZingTV.Widget.LoginText" />
</RelativeLayout>