<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="@dimen/secondary_text_size" android:textColor="@color/black_333333" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/settings" android:textAllCaps="true" style="@style/MoreParentItemStyle" />
        <LinearLayout android:orientation="vertical" android:background="@color/pure_white" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <RelativeLayout android:id="@id/ll_clearHistory" android:background="@drawable/selector" android:paddingLeft="10.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:minHeight="50.0dip">
                <ImageView android:id="@id/iconDelete" android:layout_marginRight="10.0dip" android:src="@drawable/ico_deletehistory" android:layout_alignParentLeft="true" android:layout_centerVertical="true" style="@style/MoreItemImageStyle" />
                <TextView android:textColor="@color/black_333333" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/clear_search_keyword" android:layout_toRightOf="@id/iconDelete" android:layout_centerVertical="true" />
            </RelativeLayout>
            <RelativeLayout android:id="@id/ll_resume_video" android:background="@drawable/selector" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/MoreParentItemStyle">
                <ImageView android:id="@id/iconResume" android:layout_marginRight="10.0dip" android:src="@drawable/ico_autoresume" android:layout_alignParentLeft="true" android:layout_centerVertical="true" style="@style/MoreItemImageStyle" />
                <TextView android:id="@id/tvResume" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/resume_title_setting" android:drawablePadding="5.0dip" android:layout_toRightOf="@id/iconResume" style="@style/MoreItemStyle" />
                <TextView android:textSize="@dimen/third_text_size" android:textColor="@color/gray_88888b" android:id="@id/tv_resume_video" android:paddingTop="2.0dip" android:paddingRight="5.0dip" android:paddingBottom="2.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/yes" android:layout_toRightOf="@id/iconResume" android:layout_below="@id/tvResume" android:layout_alignParentBottom="true" />
            </RelativeLayout>
        </LinearLayout>
        <TextView android:textSize="@dimen/secondary_text_size" android:textColor="@color/black_333333" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Player" android:textAllCaps="true" style="@style/MoreParentItemStyle" />
        <LinearLayout android:orientation="vertical" android:background="@color/pure_white" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <RelativeLayout android:id="@id/ll_3g" android:background="@drawable/selector" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/MoreParentItemStyle">
                <ImageView android:id="@id/icon3G" android:layout_marginRight="10.0dip" android:src="@drawable/ico_3g" android:layout_alignParentLeft="true" android:layout_centerVertical="true" style="@style/MoreItemImageStyle" />
                <TextView android:id="@id/llText3g" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/more_3g" android:drawablePadding="5.0dip" android:layout_toRightOf="@id/icon3G" style="@style/MoreItemStyle" />
                <TextView android:textSize="@dimen/third_text_size" android:textColor="@color/gray_88888b" android:paddingTop="2.0dip" android:paddingRight="5.0dip" android:paddingBottom="2.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/more_3g_note" android:layout_toLeftOf="@id/switch_3g_mode" android:layout_toRightOf="@id/icon3G" android:layout_below="@id/llText3g" android:layout_alignParentBottom="true" />
                <android.support.v7.widget.SwitchCompat android:id="@id/switch_3g_mode" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
            </RelativeLayout>
            <RelativeLayout android:id="@id/rl_exo_player" android:background="@drawable/selector" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/MoreParentItemStyle">
                <ImageView android:id="@id/iconExo" android:layout_marginRight="10.0dip" android:src="@drawable/exo_player" android:layout_alignParentLeft="true" android:layout_centerVertical="true" style="@style/MoreItemImageStyle" />
                <TextView android:id="@id/tvExo" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/setting_exo_player" android:drawablePadding="5.0dip" android:layout_toRightOf="@id/iconExo" style="@style/MoreItemStyle" />
                <TextView android:textSize="@dimen/third_text_size" android:textColor="@color/gray_88888b" android:paddingTop="2.0dip" android:paddingRight="5.0dip" android:paddingBottom="2.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/exo_desc" android:layout_toRightOf="@id/iconExo" android:layout_below="@id/tvExo" android:layout_alignParentBottom="true" />
                <android.support.v7.widget.SwitchCompat android:id="@id/switch_exo_player" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
            </RelativeLayout>
            <RelativeLayout android:id="@id/ll_finger" android:background="@drawable/selector" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/MoreParentItemStyle">
                <ImageView android:id="@id/iconGesture" android:layout_marginRight="10.0dip" android:src="@drawable/ico_gesture" android:layout_alignParentLeft="true" android:layout_centerVertical="true" style="@style/MoreItemImageStyle" />
                <TextView android:id="@id/tvSwipe" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/quick_gesture" android:drawablePadding="5.0dip" android:layout_toRightOf="@id/iconGesture" style="@style/MoreItemStyle" />
                <TextView android:textSize="@dimen/third_text_size" android:textColor="@color/gray_88888b" android:paddingTop="2.0dip" android:paddingRight="5.0dip" android:paddingBottom="2.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/quick_gesture_desc" android:layout_toLeftOf="@id/switch_gesture_mode" android:layout_toRightOf="@id/iconGesture" android:layout_below="@id/tvSwipe" android:layout_alignParentBottom="true" />
                <android.support.v7.widget.SwitchCompat android:id="@id/switch_gesture_mode" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
            </RelativeLayout>
        </LinearLayout>
        <TextView android:textSize="@dimen/secondary_text_size" android:textColor="@color/black_333333" android:id="@id/tvDebug" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Debug" android:textAllCaps="true" style="@style/MoreParentItemStyle" />
        <LinearLayout android:orientation="vertical" android:id="@id/debugContainer" android:background="@color/pure_white" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <RelativeLayout android:id="@id/ll_debug_dev" android:background="@drawable/selector" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/MoreParentItemStyle">
                <ImageView android:id="@id/iconServer" android:layout_marginRight="10.0dip" android:src="@drawable/bidv" android:layout_alignParentLeft="true" android:layout_centerVertical="true" style="@style/MoreItemImageStyle" />
                <TextView android:id="@id/llServer" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="Request api from DEV Server" android:drawablePadding="5.0dip" android:layout_toRightOf="@id/iconServer" style="@style/MoreItemStyle" />
                <TextView android:textSize="@dimen/third_text_size" android:textColor="@color/gray_88888b" android:paddingTop="2.0dip" android:paddingRight="5.0dip" android:paddingBottom="2.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Bật để chạy request từ server DEV" android:layout_toLeftOf="@id/switch_serverdev_mode" android:layout_toRightOf="@id/iconServer" android:layout_below="@id/llServer" android:layout_alignParentBottom="true" />
                <android.support.v7.widget.SwitchCompat android:id="@id/switch_serverdev_mode" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
            </RelativeLayout>
        </LinearLayout>
        <TextView android:textSize="@dimen/secondary_text_size" android:textColor="@color/black_333333" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/more_app_info" android:textAllCaps="true" style="@style/MoreParentItemStyle" />
        <TextView android:id="@id/ll_bug" android:background="@drawable/main_item_selector" android:clickable="true" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/more_bug" android:drawableLeft="@drawable/ico_bug" android:drawableRight="@drawable/ico_arrow_black_small" android:drawablePadding="10.0dip" style="@style/MoreParentItemStyle" />
        <TextView android:id="@id/ll_copyright" android:background="@drawable/main_item_selector" android:clickable="true" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/more_copyright" android:drawableLeft="@drawable/ico_copyright" android:drawableRight="@drawable/ico_arrow_black_small" android:drawablePadding="10.0dip" style="@style/MoreParentItemStyle" />
        <TextView android:id="@id/ll_rating" android:background="@drawable/main_item_selector" android:clickable="true" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/more_rating" android:drawableLeft="@drawable/ico_star" android:drawableRight="@drawable/ico_arrow_black_small" android:drawablePadding="10.0dip" style="@style/MoreParentItemStyle" />
        <TextView android:id="@id/tv_version" android:background="@drawable/main_item_selector" android:clickable="true" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/more_version" android:drawableLeft="@drawable/ico_info" android:drawablePadding="10.0dip" style="@style/MoreParentItemStyle" />
        <TextView android:textSize="@dimen/primary_text_size" android:textColor="@color/white_f7f7f7" android:gravity="center" android:id="@id/tv_log_out" android:background="@drawable/btn_round_red" android:padding="10.0dip" android:visibility="gone" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginTop="30.0dip" android:layout_marginRight="15.0dip" android:layout_marginBottom="30.0dip" android:text="@string/more_log_out" />
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>