<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:gravity="center" android:id="@id/tv_header" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="40.0dip" android:layout_marginTop="60.0dip" android:layout_marginRight="40.0dip" android:layout_marginBottom="40.0dip" android:text="@string/from_verson_4.0_ztv_only_support_login_with_zalo" style="@style/ZingTV.Widget.LoginText" />
    <LinearLayout android:orientation="horizontal" android:id="@id/ll_first" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="40.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="40.0dip" android:weightSum="2.0" android:layout_below="@id/tv_header">
        <TextView android:gravity="center" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:text="@string/easy_login" android:drawableTop="@drawable/ic_sign_in" android:drawablePadding="5.0dip" android:layout_weight="1.0" style="@style/ZingTV.Widget.LoginText" />
        <TextView android:gravity="center" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:text="@string/more_secure_account" android:drawableTop="@drawable/ic_safety" android:drawablePadding="5.0dip" android:layout_weight="1.0" style="@style/ZingTV.Widget.LoginText" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:id="@id/ll_second" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="40.0dip" android:layout_marginTop="30.0dip" android:layout_marginRight="40.0dip" android:layout_marginBottom="20.0dip" android:weightSum="2.0" android:layout_below="@id/ll_first">
        <TextView android:gravity="center" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:text="@string/synchronize_property_from_zing_id" android:drawableTop="@drawable/ic_synchronize" android:drawablePadding="5.0dip" android:layout_weight="1.0" style="@style/ZingTV.Widget.LoginText" />
        <TextView android:gravity="center" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:text="@string/give_30_days_vip" android:drawableTop="@drawable/ic_vip_30_days" android:drawablePadding="5.0dip" android:layout_weight="1.0" style="@style/ZingTV.Widget.LoginText" />
    </LinearLayout>
    <RelativeLayout android:id="@id/ll_login_zalo" android:background="@drawable/blue_rectangle_shape" android:clickable="true" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginLeft="20.0dip" android:layout_marginTop="40.0dip" android:layout_marginRight="20.0dip" android:layout_marginBottom="10.0dip" android:layout_below="@id/ll_second">
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:src="@drawable/logo_zalo" android:layout_centerVertical="true" />
        <TextView android:textSize="@dimen/secondary_text_size" android:textStyle="bold" android:textColor="@color/white_f7f7f7" android:background="@null" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/login_via_zalo" android:singleLine="true" android:layout_centerInParent="true" android:textAllCaps="false" />
    </RelativeLayout>
    <TextView android:textSize="15.0sp" android:id="@id/tv_create_account" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="20.0dip" android:text="@string/create_account" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" style="@style/ZingTV.Widget.LoginText" />
</RelativeLayout>